Wed May 12 06:37:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLDeadline/Sender/PSL_DeadlineTest_Sender.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Sender/PSL_DeadlineTest_Sender_exec.h:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PortUsage/EventComponent/PortUsageEvent_Component.idl:
        * connectors/dds4ccm/tests/PortUsage/EventComponent/PortUsageEvent_Component_exec.h:
        * connectors/dds4ccm/tests/PortUsage/EventComponent/PortUsageEvent_Component_exec.cpp:
        * connectors/dds4ccm/tests/PortUsage/EventConnector/PortUsageEvent_Connector.idl:
        * connectors/dds4ccm/tests/PortUsage/StateComponent/PortUsageState_Component.idl:
        * connectors/dds4ccm/tests/PortUsage/StateComponent/PortUsageState_Component_exec.h:
        * connectors/dds4ccm/tests/PortUsage/StateComponent/PortUsageState_Component_exec.cpp:
        * connectors/dds4ccm/tests/PortUsage/StateConnector/PortUsageState_Connector.idl: